# pdfrs

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md  TODO.md  advanced_test.md  roundtrip_test.md  test.md  test_multiple_tables.md  test_table.md
benches/: pdf_benchmarks.rs
examples/: api_reference_complex.md  complex_report.md  enhanced_features.md  full_features.md  math_and_formulas.md  mixed_content.md  technical_report_complex.md  technical_spec.md
proptest-regressions/: elements.txt  image.txt
src/: builder.rs  compression.rs  elements.rs  image.rs  lib.rs  main.rs  markdown.rs  optimization.rs  parallel.rs  pdf.rs  pdf_generator.rs  pdf_ops.rs  security.rs  streaming.rs  table_renderer.rs
tests/: roundtrip_test.rs
