[package]
name = "pdf-rs"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to read/write PDFs and convert to/from markdown"
authors = ["Ying Kit WONG"]
documentation = "https://docs.rs/pdf-rs"
license = "Apache-2.0"


[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bin]]
name = "pdf-cli"
path = "src/main.rs"

[[bench]]
name = "pdf_benchmarks"
harness = false
