[package]
name = "pdfrs"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to read/write PDFs and convert to/from markdown"
authors = ["Ying Kit WONG"]
documentation = "https://docs.rs/pdfrs"
repository = "https://github.com/yingkitw/pdfrs"
homepage = "https://github.com/yingkitw/pdfrs"
license = "Apache-2.0"

[lib]
name = "pdfrs"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.0"
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bin]]
name = "pdfcli"
path = "src/main.rs"

[[bench]]
name = "pdf_benchmarks"
harness = false
